--- a/src/REstate.Client.Tester/packages.config
+++ b/src/REstate.Client.Tester/packages.config
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="Consul" version="0.6.4.1" targetFramework="net461" />
+  <package id="Nancy" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy.Authentication.Stateless" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy.Owin" version="1.4.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net45" />
+  <package id="REstate.Domain.Core" version="1.0.1.0" targetFramework="net461" />
+  <package id="REstateClient" version="1.0.4.0" targetFramework="net461" />
 </packages>
