--- a/src/REstate.Connectors.RoslynScripting.Globals/packages.config
+++ b/src/REstate.Connectors.RoslynScripting.Globals/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net45" />
+  <package id="REstate.Domain.Core" version="1.0.1.0" targetFramework="net461" />
 </packages>
