--- a/src/REstate.Connectors.RoslynScripting/packages.config
+++ b/src/REstate.Connectors.RoslynScripting/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.CodeAnalysis.Scripting" version="1.2.1" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Scripting.Common" version="1.2.1" targetFramework="net461" />
   <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net45" />
+  <package id="REstate.Domain.Core" version="1.0.1.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.0.0" targetFramework="net461" />
   <package id="System.Collections" version="4.0.10" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net461" />
