--- a/src/REstate.Connectors.Susanoo/packages.config
+++ b/src/REstate.Connectors.Susanoo/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="1.0.1.0" targetFramework="net461" />
   <package id="Stateless" version="2.5.62.0" targetFramework="net461" />
   <package id="Susanoo.Core" version="1.2.4.2" targetFramework="net461" />
   <package id="Susanoo.SqlServer" version="1.2.4.2" targetFramework="net461" />
