--- a/src/REstate.Repositories.Chrono.Susanoo/packages.config
+++ b/src/REstate.Repositories.Chrono.Susanoo/packages.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="net461" />
+  <package id="Nancy" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy.Authentication.Stateless" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy.Owin" version="1.4.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net45" />
+  <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="1.0.1.0" targetFramework="net461" />
+  <package id="REstateClient" version="1.0.4.0" targetFramework="net461" />
   <package id="Susanoo.Core" version="1.2.4.2" targetFramework="net461" />
 </packages>
