--- a/src/REstate.Services.Chrono/packages.config
+++ b/src/REstate.Services.Chrono/packages.config
@@ -19,6 +19,7 @@
   <package id="Psibr.Platform.Logging.Serilog" version="1.0.1.0" targetFramework="net45" />
   <package id="Psibr.Platform.Nancy" version="2.0.2.0" targetFramework="net45" />
   <package id="Psibr.Platform.Nancy.Service" version="1.0.1.0" targetFramework="net45" />
+  <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net461" />
   <package id="Topshelf" version="3.3.1" targetFramework="net461" />
