--- a/src/REstate.Services.ChronoConsumer/packages.config
+++ b/src/REstate.Services.ChronoConsumer/packages.config
@@ -2,10 +2,17 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="AutofacSerilogIntegration" version="1.0.10" targetFramework="net461" />
+  <package id="Nancy" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy.Authentication.Stateless" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy.Owin" version="1.4.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Psibr.Platform" version="2.0.1.0" targetFramework="net45" />
   <package id="Psibr.Platform.Logging.Serilog" version="1.0.1.0" targetFramework="net45" />
+  <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="1.0.1.0" targetFramework="net461" />
+  <package id="REstateClient" version="1.0.4.0" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net461" />
   <package id="Topshelf" version="3.3.1" targetFramework="net461" />
