--- a/src/REstate.Connectors.RabbitMq/packages.config
+++ b/src/REstate.Connectors.RabbitMq/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
+  <package id="RabbitMQ.Client" version="3.6.1" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="1.0.1.0" targetFramework="net461" />
 </packages>
