Changes to action invocation by allowing transforms and tpl!

--- a/src/REstate.Platform/packages.config
+++ b/src/REstate.Platform/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="1.0.1.0" targetFramework="net461" />
 </packages>
