--- a/src/REstate.Stateless/packages.config
+++ b/src/REstate.Stateless/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="1.0.1.0" targetFramework="net461" />
   <package id="Stateless" version="2.5.62.0" targetFramework="net461" />
 </packages>
