--- a/src/REstate.Platform/REstate.Platform.csproj
+++ b/src/REstate.Platform/REstate.Platform.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\packages\Psibr.Platform.3.1.0\lib\net45\Psibr.Platform.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="REstate.Domain.Core, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\REstate.Domain.Core.1.0.1.0\lib\net45\REstate.Domain.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -53,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="REstatePlatformConfiguration.cs" />
     <Compile Include="ServiceCredentials.cs" />
+    <Compile Include="TaskConnectorDecorator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
