--- a/src/REstateConfig.json
+++ b/src/REstateConfig.json
@@ -39,7 +39,7 @@
   },
   "connectorConfigurations": {
     "RabbitMq": {
-      "hostName": "host",
+      "hostName": "DEVTEST01",
       "virtualHost": "/",
       "userName": "REstate",
       "password": "REstate"
