--- a/src/REstate.Connectors.Decorators.Task/REstate.Connectors.Decorators.Task.csproj
+++ b/src/REstate.Connectors.Decorators.Task/REstate.Connectors.Decorators.Task.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6905FC7A-53DE-4454-A37B-5D53E4702785}</ProjectGuid>
+    <ProjectGuid>{71A57DEA-FC17-4B35-8928-6A2396FDB8B2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>REstate.Platform</RootNamespace>
-    <AssemblyName>REstate.Platform</AssemblyName>
+    <RootNamespace>REstate.Connectors.Decorators.Task</RootNamespace>
+    <AssemblyName>REstate.Connectors.Decorators.Task</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Psibr.Platform, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Psibr.Platform.3.1.0\lib\net45\Psibr.Platform.dll</HintPath>
       <Private>True</Private>
@@ -52,20 +48,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectorDecoratorAssociations.cs" />
-    <Compile Include="ConnectorFactoryDecorator.cs" />
-    <Compile Include="ConnectorRegistrationExtensions.cs" />
-    <Compile Include="DecoratingConnectorFactoryResolver.cs" />
-    <Compile Include="IConnectorDecorator.cs" />
-    <Compile Include="IREstateConnectorModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="REstatePlatformConfiguration.cs" />
-    <Compile Include="ServiceCredentials.cs" />
+    <Compile Include="TaskConnector.cs" />
+    <Compile Include="TaskConnectorDecorator.cs" />
+    <Compile Include="TaskConnectorOptions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <ProjectReference Include="..\REstate.Platform\REstate.Platform.csproj">
+      <Project>{6905fc7a-53de-4454-a37b-5d53e4702785}</Project>
+      <Name>REstate.Platform</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
