--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,6 @@ UpgradeLog*.htm
 FakesAssemblies/
 src/Susanoo.sln.GhostDoc.xml
 *.DotSettings
+
+src/REstate.Service.AdminUI/wwwroot/app/*.js
+src/REstate.Service.AdminUI/wwwroot/app/*.js.map
