--- a/src/REstate.Services.Core/REstate.Services.Core.csproj
+++ b/src/REstate.Services.Core/REstate.Services.Core.csproj
@@ -91,8 +91,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="OwinJwtAndCookie, Version=1.0.8.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\OwinJwtAndCookie.1.0.8.0\lib\net45\OwinJwtAndCookie.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="Psibr.Platform, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Psibr.Platform.3.1.0\lib\net45\Psibr.Platform.dll</HintPath>
