--- a/src/REstate.Service.AdminUI/REstate.Services.AdminUI.csproj
+++ b/src/REstate.Service.AdminUI/REstate.Services.AdminUI.csproj
@@ -171,10 +171,12 @@
     <TypeScriptCompile Include="wwwroot\app\navbar.component.ts" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="wwwroot\app\json-editor.styles.css" />
     <Content Include="wwwroot\app\navbar.component.html" />
     <Content Include="wwwroot\index.html" />
     <Content Include="wwwroot\styles.css" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
