--- a/src/REstate.Service.AdminUI/wwwroot/package.json
+++ b/src/REstate.Service.AdminUI/wwwroot/package.json
@@ -11,6 +11,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "ace-builds": "^1.2.2",
     "angular2": "2.0.0-beta.15",
     "bootstrap": "3.3.6",
     "es6-shim": "^0.35.0",
