--- a/src/REstate.Service.AdminUI/REstate.Services.AdminUI.csproj
+++ b/src/REstate.Service.AdminUI/REstate.Services.AdminUI.csproj
@@ -105,6 +105,10 @@
       <HintPath>..\packages\Psibr.Platform.Nancy.3.0.0\lib\net45\Psibr.Platform.Nancy.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Psibr.Platform.Nancy.Service, Version=3.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Psibr.Platform.Nancy.Service.3.0.2.0\lib\net45\Psibr.Platform.Nancy.Service.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Serilog, Version=1.5.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <HintPath>..\packages\Serilog.1.5.14\lib\net45\Serilog.dll</HintPath>
       <Private>True</Private>
@@ -143,16 +147,9 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="wwwroot\package.json" />
     <None Include="packages.config" />
-    <None Include="wwwroot\tsconfig.json" />
-    <None Include="wwwroot\typings.json" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Platform.Nancy.Service\src\Psibr.Platform.Nancy.Service\Psibr.Platform.Nancy.Service.csproj">
-      <Project>{e6f516b4-429a-4f93-932b-2b651e0f8de0}</Project>
-      <Name>Psibr.Platform.Nancy.Service</Name>
-    </ProjectReference>
     <ProjectReference Include="..\REstate.Platform\REstate.Platform.csproj">
       <Project>{6905fc7a-53de-4454-a37b-5d53e4702785}</Project>
       <Name>REstate.Platform</Name>
@@ -161,19 +158,6 @@
       <Project>{85f6276a-c3f1-4496-b8d5-b0df9a9aad60}</Project>
       <Name>REstate.Web.AdminUI</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <TypeScriptCompile Include="wwwroot\app\about.component.ts" />
-    <TypeScriptCompile Include="wwwroot\app\app.component.ts" />
-    <TypeScriptCompile Include="wwwroot\app\graph-viz.component.ts" />
-    <TypeScriptCompile Include="wwwroot\app\home.component.ts" />
-    <TypeScriptCompile Include="wwwroot\app\main.ts" />
-    <TypeScriptCompile Include="wwwroot\app\navbar.component.ts" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="wwwroot\app\navbar.component.html" />
-    <Content Include="wwwroot\index.html" />
-    <Content Include="wwwroot\styles.css" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
