--- a/src/REstate.Connectors.RabbitMq/REstate.Connectors.RabbitMq.csproj
+++ b/src/REstate.Connectors.RabbitMq/REstate.Connectors.RabbitMq.csproj
@@ -73,6 +73,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="action-schema.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
