--- a/src/REstate.Web.Chrono/REstate.Web.Chrono.csproj
+++ b/src/REstate.Web.Chrono/REstate.Web.Chrono.csproj
@@ -85,10 +85,6 @@
       <HintPath>..\packages\Psibr.Platform.Nancy.3.0.0\lib\net45\Psibr.Platform.Nancy.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="REstate.Domain.Chrono, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\REstate.Domain.Chrono.1.0.1.0\lib\net45\REstate.Domain.Chrono.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -109,6 +105,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Requests\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\REstate.Domain.Chrono\src\REstate.Domain.Chrono\REstate.Domain.Chrono.csproj">
+      <Project>{6ee10dc1-eaa1-4754-b207-d4c4b86eab9f}</Project>
+      <Name>REstate.Domain.Chrono</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
