Updated packages and added some logging.

--- a/src/REstate.Repositories.Chrono.Susanoo/packages.config
+++ b/src/REstate.Repositories.Chrono.Susanoo/packages.config
@@ -8,6 +8,7 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
-  <package id="REstateClient" version="5.0.0.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="5.0.1.0" targetFramework="net461" />
+  <package id="REstateClient" version="5.0.1" targetFramework="net461" />
   <package id="Susanoo.Core" version="1.2.4.2" targetFramework="net461" />
 </packages>
