--- a/src/REstate.Repositories.Chrono.Susanoo/REstate.Repositories.Chrono.Susanoo.csproj
+++ b/src/REstate.Repositories.Chrono.Susanoo/REstate.Repositories.Chrono.Susanoo.csproj
@@ -62,8 +62,12 @@
       <HintPath>..\packages\Psibr.Platform.3.1.0\lib\net45\Psibr.Platform.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="REstate.Client, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\REstateClient.5.0.0.0\lib\net45\REstate.Client.dll</HintPath>
+    <Reference Include="REstate.Client, Version=5.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\REstateClient.5.0.1\lib\net45\REstate.Client.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="REstate.Domain.Core, Version=5.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\REstate.Domain.Core.5.0.1.0\lib\net45\REstate.Domain.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Susanoo.Core, Version=1.2.4.2, Culture=neutral, PublicKeyToken=0a505ce04f8a59d5, processorArchitecture=MSIL">
@@ -91,10 +95,6 @@
     <ProjectReference Include="..\REstate.Domain.Chrono\src\REstate.Domain.Chrono\REstate.Domain.Chrono.csproj">
       <Project>{6ee10dc1-eaa1-4754-b207-d4c4b86eab9f}</Project>
       <Name>REstate.Domain.Chrono</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\REstate.Domain.Core\src\REstate.Domain.Core\REstate.Domain.Core.csproj">
-      <Project>{9c873c5d-015b-436c-8473-fa93da90757d}</Project>
-      <Name>REstate.Domain.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\REstate.Platform\REstate.Platform.csproj">
       <Project>{6905fc7a-53de-4454-a37b-5d53e4702785}</Project>
