--- a/src/REstate.Services.ChronoConsumer/packages.config
+++ b/src/REstate.Services.ChronoConsumer/packages.config
@@ -13,6 +13,7 @@
   <package id="REstateClient" version="5.0.0.0" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Seq" version="1.5.36" targetFramework="net461" />
   <package id="Topshelf" version="4.0.0" targetFramework="net461" />
   <package id="Topshelf.Serilog" version="4.0.0" targetFramework="net461" />
 </packages>
