--- a/src/REstate.Services.Chrono/packages.config
+++ b/src/REstate.Services.Chrono/packages.config
@@ -21,6 +21,7 @@
   <package id="Psibr.Platform.Nancy.Service" version="3.0.3" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Seq" version="1.5.36" targetFramework="net461" />
   <package id="Topshelf" version="4.0.0" targetFramework="net461" />
   <package id="Topshelf.Serilog" version="4.0.0" targetFramework="net461" />
 </packages>
